--- a/index.html
+++ b/index.html
@@ -62,10 +62,17 @@
             padding-left: 5px;
             background-color: white;
         }
+        .b1 {
+            margin-left: 50px;
+            background-color: aqua;
+            width: 80px;
+            height: 30px;
+        }
     </style>
-    <script type="text/javascript">
+    <script>
         // H5 plus事件处理
         function plusReady() {
+//            alert("asdasd")
             alert("uuid: " + plus.device.uuid);
         }
 
@@ -89,6 +96,7 @@
 5.邀请码可自己使用也可赠送其他人使用。
 6.本活动最终解释权归美景听听所有。
 </pre>
+<button class="b1" onclick="plusReady()">按钮</button>
 </body>
 </html>
 
