--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
+<style>
+.btn {
+	width: 200px;
+	height: 60px;
+	display:block;
+	margin: 220px auto;
+	font-size: 30px;
+	border: 1px solid;
+}
+</style>
 </head>
 
 <body>
 
 <p id="demo"></p>
-<button onclick="getLocation()">获取经纬度</button>
+<button class="btn" onclick="getLocation()">获取经纬度</button>
 
 
 </body>
