--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <title></title>
 <style>
-.btn {
-	width: 200px;
-	height: 60px;
+button {
+	width: 25rem;
+	height: 5rem;
 	display:block;
 	margin: 220px auto;
-	font-size: 30px;
+	font-size: 3rem;
 	border: 1px solid;
 }
 </style>
@@ -18,7 +18,7 @@
 <body>
 
 <p id="demo"></p>
-<button class="btn" onclick="getLocation()">获取经纬度</button>
+<button onclick="getLocation()">获取经纬度</button>
 
 
 </body>
